# nr-rfc-alertauthoring

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: README.md  alembic.ini  debug_init.py  logger.conf  pyproject.toml
backend/alembic/: README  README.md  env.py
backend/alembic/data/: alert_levels.json  basins.json  cap_statuses.json
backend/alembic/u-junk/: V5_alert_tables.py  V7_add_mockup_data.py
backend/alembic/versions/: V10_add_cap_event_history_and_event_history_.py  V11_fix_alert_status_table.py  V12_adding_additional_info_field.py  V1_create_schema.py  V2_first_migration.py  V2_initial_schema.py  V3_add_basin_data.py  V3_load_users.py  V4_adding_alert_tables.py  V4_rename_basin_and_sub_basin_pks.py  V5_add_alerting_tables.py  V5_create_alert_tables.py  V6_add_alert_level_fixtures.py  V7_add_mockup_data.py  V8_adding_the_alert_history_table.py  V9_add_cap_event_relationships.py
backend/db/migrations/: V1.0.0__init.sql  V2.0.0__add_users.sql
backend/docs/: local_dev.md
backend/src/: main.py  types.py
backend/src/core/: config.py
backend/src/db/: session.py
backend/src/oidc/: oidc.py  oidcAuthorize.py
backend/src/v1/: __init__.py
backend/src/v1/crud/: crud_alerts.py  crud_cap.py
backend/src/v1/models/: __init__.py  alerts.py  auth_model.py  basins.py  cap.py  model.py
backend/src/v1/repository/: user_repository.py
backend/src/v1/routes/: alert_levels.py  alert_routes.py  basin_routes.py  cap_routes.py  user_routes.py
backend/test/: conftest.py  constants.py  pytest.ini
backend/test/api_tests/: test_api_alerts.py  test_api_caps.py
backend/test/db_tests/: test_cap_delta.py  test_db_alerts.py  test_db_cap.py
backend/test/fixtures/: alert_fixtures.py  cap_fixtures.py  data_fixtures.py
backend/test/helpers/: alert_helpers.py  db_helpers.py
backend/util/: database_delete.py  logging.config
demo/: readme.md  roi_example.py  sqlmodel_association_pattern.py
docs/: database.md  db_migration_alembic.md  frontend-dev.md  local_dev.md
integration-tests/: package-lock.json
junk/: V5_add_alert_level_fixtures.py  V6_add_mockup_data.py
(+131 files in other folders)
